fix(DynamicPage/ObjectPage): increase header z-index (#6116)
Prevents that parts of some Web Components (e.g. `Slider`) are shining through the header content

Fixes #6107

--- a/packages/main/src/components/DynamicPageTitle/DynamicPageTitle.module.css
+++ b/packages/main/src/components/DynamicPageTitle/DynamicPageTitle.module.css
@@ -9,7 +9,7 @@
   justify-content: space-between;
   position: sticky;
   inset-block-start: 0;
-  z-index: 2;
+  z-index: 3;
   cursor: pointer;
 
   &[data-not-clickable='true'] {
