--- a/packages/main/src/components/ObjectPage/ObjectPage.module.css
+++ b/packages/main/src/components/ObjectPage/ObjectPage.module.css
@@ -39,7 +39,7 @@
   background-color: var(--sapObjectHeader_Background);
   position: sticky;
   inset-block-start: 0;
-  z-index: 2;
+  z-index: 4;
   cursor: pointer;
 
   [data-component-name='DynamicPageTitle'] {
@@ -93,12 +93,12 @@
 
 .anchorBar {
   position: sticky;
-  z-index: 2;
+  z-index: 4;
 }
 
 .tabContainer {
   position: sticky;
-  z-index: 1;
+  z-index: 3;
 }
 
 .tabContainerComponent {
